--- a/cpp_ap_28/cpp_ap_28.vcxproj.filters
+++ b/cpp_ap_28/cpp_ap_28.vcxproj.filters
@@ -2,5 +2,18 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Date.cpp">
+      <Filter>Date</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Date">
+      <UniqueIdentifier>{73f3ee06-fde7-45af-bfe5-088b255c3b86}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Date.h">
+      <Filter>Date</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
